# Invenio-OpenAIRE

./: .gitignore  INSTALL  Makefile.am  THANKS  configure-tests.py  configure.ac
OpenAIRE/: Makefile.am  openaire.tpl  openaire_deposit_webinterface.py
config/: invenio-autotools.conf.in  invenio.conf
modules/: Makefile.am
modules/OpenAIRE/: Makefile.am
modules/OpenAIRE/css/: Makefile.am
modules/OpenAIRE/etc/: Makefile.am  names.txt  openaire.css  openaire.tpl  openaire_form.tpl  openaire_page.tpl  openaire_page.tpl-old  original2.html  projects.txt  template_marcxml.xml
modules/OpenAIRE/flash/: Makefile.am
modules/OpenAIRE/js/: Makefile.am
modules/OpenAIRE/lib/: Makefile.am  OpenAIRE_Response_Elements.py  OpenAIRE_recmysql2curdir.py  bfe_OpenAIRE_access_rights.py  bfe_dnet_field.py  bst_OpenAIRE_check_embargo.py  bst_OpenAIRE_pgreplayqueue.py  bst_chomsky.py  bst_load_OpenAIRE_kbs.py  chomsky.py  dnetutils.py  multiproject ideas  openaire_deposit_config.py  openaire_deposit_engine.js  openaire_deposit_engine.py  openaire_deposit_templates.py  openaire_deposit_utils.py  openaire_deposit_webinterface.py  websession_templates_OpenAIRE.py  webstyle_templates_OpenAIRE.py
modules/bibauthorid/lib/: bibauthorid_daemon.py
modules/bibcirculation/lib/: bibcirculation_daemon.py  bibcirculation_webinterface.py
modules/bibclassify/lib/: bibclassify_daemon.py
modules/bibconvert/etc/: Makefile.am  identity.xsl
modules/bibconvert/lib/: bibconvert_regression_tests.py  bibconvert_xslt_engine.py
modules/bibedit/lib/: bibedit_engine.py  bibeditcli.py  bibrecord.py  bibrecord_tests.py
modules/bibexport/etc/: Makefile.am  googlescholar-openurl.cfg
modules/bibexport/lib/: Makefile.am  bibexport.py  bibexport_method_googlescholar.py  bibexport_method_googlescholar_openurl.py
modules/bibformat/lib/: bibformat_config.py  bibformat_engine.py  bibformat_templates.py  bibreformat.py
modules/bibharvest/etc/: Makefile.am
modules/bibharvest/lib/: Makefile.am  oai_harvest_daemon.py  oai_harvest_getter.py  oai_repository_admin.py  oai_repository_server.py  oai_repository_server_ctxo.py  oai_repository_tests.py  oai_repository_updater.py  oai_repository_webinterface.py
modules/bibindex/lib/: bibindex_engine.py  derived_logical_fields.py
modules/bibknowledge/lib/: bibknowledge_webinterface.py  bibknowledgeadmin.py
modules/bibmatch/lib/: bibmatch_engine.py
modules/bibrank/lib/: Makefile.am  bibrank.py  bibrank_downloads_grapher.py  bibrank_downloads_similarity.py  bibrank_regression_tests.py  bibrank_tag_based_indexer.py  bibrank_word_indexer.py  bibrank_word_indexer_c.c  bibrank_word_indexer_c.pyx  bibrank_word_indexer_setup.py  queryanalyzer.py
modules/bibsched/lib/: Makefile.am  bibsched.py  bibtask.py  bibtask_config.py  bibtaskex.py  bibtasklet.py
modules/bibsword/lib/: bibsword_client.py  bibsword_client_dblayer.py
modules/bibupload/lib/: Makefile.am  batchuploader.py  batchuploader_engine.py  batchuploader_webinterface.py  bibupload.py  bibupload_config.py  bibupload_regression_tests.py
modules/bibworkflow/lib/: controlflow.py  engine.py  unittest_engine_workflow.py  unittest_patterns.py  utils.py
modules/elmsubmit/lib/: Makefile.am
modules/miscutil/: Makefile.am
modules/miscutil/demo/: demobibdata.xml  democfgdata.sql
modules/miscutil/lib/: Makefile.am  __init__.py  dateutils.py  dbdump.py  dnetutils.py  errorlib.py  errorlib_regression_tests.py  htmlutils.py  intbitset.c  intbitset.pyx  invenio_connector.py  inveniocfg.py  mailutils.py  pluginutils.py  pluginutils_tests.py  shellutils.py  textutils.py  urlutils.py
modules/miscutil/sql/: tabcreate.sql  tabdrop.sql  tabfill.sql
modules/refextract/lib/: refextract_engine.py  refextract_regression_tests.py  refextract_tag.py
modules/webaccess/lib/: Makefile.am  access_control_config.py  access_control_engine.py  access_control_firerole.py  access_control_firerole_tests.py  access_control_mailcookie.py  external_authentication.py  external_authentication_robot.py  external_authentication_sso.py  webaccess_exporter.py  webaccess_regression_tests.py  webaccessadmin_lib.py
modules/webalert/lib/: alert_engine.py
modules/webbasket/lib/: webbasket_webinterface.py
modules/webcomment/lib/: Makefile.am  webcomment_webinterface.py
modules/websearch/lib/: search_engine.py  search_engine_config.py  websearch_regression_tests.py  websearch_templates.py  (+3 more)
modules/websubmit2/: draft.txt
modules/websubmitbezirg/: Makefile.am
modules/websubmitng/: Makefile.am
modules/websword/: Makefile.am
(+216 files in other folders)
