## This file is part of Invenio.
## Copyright (C) 2010, 2011 CERN.
##
## CDS Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## CDS Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with CDS Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

cssdir = $(localstatedir)/www/css
imagesdir = $(localstatedir)/www/css/images

css_DATA = uploadify.css jquery-ui-1.8.5.custom.css
images_DATA = ui-bg_flat_0_aaaaaa_40x100.png \
              ui-bg_glass_55_fbf9ee_1x400.png \
              ui-bg_glass_75_dadada_1x400.png \
              ui-bg_glass_95_fef1ec_1x400.png \
              ui-icons_222222_256x240.png \
              ui-icons_454545_256x240.png \
              ui-icons_cd0a0a_256x240.png \
              ui-bg_flat_75_ffffff_40x100.png \
              ui-bg_glass_65_ffffff_1x400.png \
              ui-bg_glass_75_e6e6e6_1x400.png \
              ui-bg_highlight-soft_75_cccccc_1x100.png \
              ui-icons_2e83ff_256x240.png \
              ui-icons_888888_256x240.png

EXTRA_DIST = $(css_DATA) $(images_DATA)

CLEANFILES = *~ *.tmp *.pyc
